fix visibility on project anchor

--- a/client/src/components/pages/projects/projects.scss
+++ b/client/src/components/pages/projects/projects.scss
@@ -49,6 +49,7 @@
 	bottom: 0;
 	width: 100%;
 	height: 110%;
+	visibility: hidden;
 }
 
 .mockup {
